Fix bug on firefox who we are

--- a/themes/yoga_outreach/sass/_involved.scss
+++ b/themes/yoga_outreach/sass/_involved.scss
@@ -54,7 +54,7 @@
 
         .small-button{
             @include small-button;
-            margin: 0 auto;
+            margin: 0 auto 26px;
             color: $base_color;
             text-decoration: none;
             padding:15px;
@@ -66,7 +66,7 @@
         .white-button{
             text-decoration: none;
             color: $darktext_color;
-            margin: 0 auto;
+            // margin: 0 auto;
             &:visited{
                 color: $darktext_color;
             }
